Changed body width to 100% not 100vw to prevent horizontal scrollbars

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ html {
 
 body {
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
   overflow-x: hidden;
